--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             background: #0c0c0c;
             color: white;
         }
+        
+        ::-webkit-scrollbar{
+            width: 5px;
+            border-radius: 9px;
+            background: #E7E9EB;
+        }
 
         iframe {
             background: white;
