--- a/index.html
+++ b/index.html
@@ -86,7 +86,16 @@
     <center>
         <div class="display-flex">
             <textarea name="textarea" oninput="showPreview()" id="textarea"
-                placeholder="Paste the code here"></textarea>
+                placeholder="Paste the code here">
+<html>
+    <head>
+        <title>Title</title>
+    </head>
+    <body>
+        
+    </body>
+</html>
+            </textarea>
             <iframe id="result" placeholder="Result will be shown here"></iframe>
         </div>
     </center>
