--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <center>
         <div class="display-flex">
             <textarea name="textarea" oninput="showPreview()" id="textarea"
-                placeholder="Paste the code here"></textarea>
+                placeholder="Type the code here"></textarea>
             <iframe id="result" placeholder="Result will be shown here"></iframe>
         </div>
     </center>
