--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
  <body>
   <div class="header">
    <h1></h1>
-   <button id="btn">Run code</button>
+   <abbr title="alt+r to run">
+   <button id="btn" accessKey="r">Run code</button>
+    </abbr>
   </div>
   <center>
    <div class="display-flex">
